--- a/materialtagview/src/main/res/layout/tag_layout.xml
+++ b/materialtagview/src/main/res/layout/tag_layout.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
-        android:background="@drawable/drawable_tag"
+        android:background="@drawable/drawable_tag_canc"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_maxWidth="150dp">
@@ -20,18 +20,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
             android:maxLines="1"
             android:text="Hello"
             android:textColor="@color/white" />
+
+        <View
+            android:layout_width="10dp"
+            android:layout_height="0dp"
+            />
 
         <ImageView
             android:id="@+id/image_view_cross"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="4dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
             android:background="@null"
-            android:src="@drawable/ic_cancel" />
+            android:src="@drawable/ic_cancel_white" />
     </LinearLayout>
 </LinearLayout>
