--- a/materialtagview/src/main/res/values/colors.xml
+++ b/materialtagview/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="tag_bg">#00574B</color>
+    <color name="tag_bg">#008060</color>
     <color name="white">#FFFFFF</color>
 </resources>
