--- a/materialtagview/src/main/res/layout/item_tag_small.xml
+++ b/materialtagview/src/main/res/layout/item_tag_small.xml
@@ -9,8 +9,8 @@
         android:id="@+id/tag_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:background="@drawable/drawable_tag_canc"
+        android:layout_margin="1dp"
+        android:background="@drawable/drawable_tag_small"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_maxWidth="150dp">
@@ -20,25 +20,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:maxLines="1"
-            android:text="Hello"
+            android:layout_marginRight="8dp"
+            android:layout_marginEnd="8dp"
+            android:textSize="12sp"
+            android:text="Hello tag!"
             android:textColor="@color/white" />
 
-        <View
-            android:layout_width="10dp"
-            android:layout_height="0dp"
-            />
-
-        <ImageView
-            android:id="@+id/image_view_cross"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@null"
-            android:src="@drawable/ic_cancel_white" />
     </LinearLayout>
 </LinearLayout>
